<resources>
    <string name="app_name">Travel Share</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">302924064240826</string>
    <string name="fb_login_protocol_scheme">fb302924064240826</string>
    <string name="default_notification_channel_id">Bạn có thông báo mới</string>
    <string name="fcm_message">Ahihi</string>
    <string name="channelId">Notify</string>
    <string name="server_client_id">544446656625-7n5vha8b745qn8bp7f7qe1hu3esdpcor.apps.googleusercontent.com</string>
    <string name="msg_token_fmt">a</string>
    <string name="tin">Successful transaction!!!</string>
    <string name="quenMk"><u>Forgot password?</u></string>
    <string name="add_room">Add room</string>
    <string name="input_title">Input title</string>
    <string name="price_room">Price/day</string>
    <string name="info_full_room">Detailed room description</string>
    <string name="btn_add">ADD</string>
    <string name="btn_retext">RETYPE</string>
    <string name="info">Details</string>
    <string name="del_room">Delete my room</string>
    <string name="cancle">Cancel</string>
    <string name="call">CALL</string>
    <string name="change_pass">CHANGE PASSWORD</string>
    <string name="input_pass_old">Input old password</string>
    <string name="input_pass_new">Input new password</string>
    <string name="input_again_pass_new">Retype new password</string>
    <string name="user_name_full">Full name: </string>
    <string name="cmnd">ID card: </string>
    <string name="from">From</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="to">To</string>
    <string name="note">Note!</string>
    <string name="book_room">Book</string>
    <string name="call2">call</string>
    <string name="edit">EDIT</string>
    <string name="input_full_name">Input full name</string>
    <string name="input_cmnd">Input ID card</string>
    <string name="input_mail">Input email</string>
    <string name="input_birthday">Your birthday</string>
    <string name="input_phone">Number phone</string>
    <string name="input_address">Address</string>
    <string name="save_room">Save</string>
    <string name="watch">Info</string>
    <string name="erro_book_room">You have not had any guests with any reservations</string>
    <string name="find_room">Find a room</string>
    <string name="erro_save_room">You have not saved any rooms</string>
    <string name="erro_book">You have no transactions yet</string>
    <string name="login">LOGIN</string>
    <string name="input_pw">Input password</string>
    <string name="save_pass">Remember</string>
    <string name="emty_reg">No account? REGISTRATION</string>
    <string name="input_find_room">Enter the room you want to find</string>
    <string name="erro_have_room">You do not have any rooms </string>
    <string name="register">REGISTER</string>
    <string name="input_pw2">Retype your password</string>
    <string name="birthday">Birthday:</string>
    <string name="phone">Number phone:</string>
    <string name="address">Address:</string>
    <string name="update">UPDATE</string>
    <string name="erro_noti">You have not announced yet</string>
    <string name="noname">No name</string>
    <string name="room_manager">Room manager</string>
    <string name="save_room_like">Favorite room</string>
    <string name="reg_user_room">Register as a rental owner</string>
    <string name="logout">Logout</string>
    <string name="erro">Erro</string>
    <string name="status">Status:</string>
    <string name="status_wait">Wait for confirmation</string>
    <string name="fullname">Full name:</string>
    <string name="from_date">Check-in date:</string>
    <string name="todate">Check-out date:</string>
    <string name="note_1">Note:</string>
    <string name="ok">ACCEPT</string>
    <string name="no">REFUSE</string>
    <string name="click_to_watch">Click to see more!</string>
    <string name="forgot">FORGOT PASSWORD</string>
    <string name="send_to">Send to:</string>
    <string name="messenger">Message</string>
    <string name="send">SEND</string>
    <string name="noti">NOTIFICATION</string>
    <string name="accept">Agree</string>
    <string name="save_room_succes">Save room</string>
    <string name="unsave__room">Un-save</string>
    <string name="erro_add_room">You cannot make a reservation by yourself!</string>
    <string name="login_first">Login first!</string>
    <string name="Close">Close</string>
    <string name="hello">\"Hello, \"</string>
    <string name="any_room">\" not even?\"</string>
    <string name="send_done">Message sent successfully!</string>
    <string name="send_erro">Message sent failed!</string>
    <string name="erro_phone">No phone number!</string>
    <string name="erro_input">Fields cannot be left blank!</string>
    <string name="erro_book_toast">Check-out date is not prior to booking date</string>
    <string name="book_sucess">Book successfully!</string>
    <string name="not_new_book">New reservation available</string>
    <string name="noti_book_from_user">\" have made your reservation. Please confirm the transaction.\"</string>
    <string name="updating">Updating...</string>
    <string name="update_success">Upate room successful!</string>
    <string name="only_user">Only customers can use these functions!</string>
    <string name="info_room">ROOM DETAILS</string>
    <string name="library">Photo library</string>
    <string name="load_where">Where do you want to upload photos?</string>
    <string name="erro_camera">Please enable camera</string>
    <string name="erro_lib">Please enable library permissions</string>
    <string name="add_room_success">Add room successful!</string>
    <string name="dang_gd">MY TRANSACTION</string>
    <string name="khach_gd">CUSTOMERS TRANSACTION</string>
    <string name="registing">Signing up...</string>
    <string name="reg_success">Sign Up Success</string>
    <string name="exist_accpunt">Account already exists</string>
    <string name="pw_must">Required to enter a password</string>
    <string name="erro_pw">Password must be 6 characters or more</string>
    <string name="re_pass">Enter the password</string>
    <string name="pw_not_like">Password incorrect</string>
    <string name="must_email">Required to enter email</string>
    <string name="erro_email">Incorrect email format, ex: abc@example.com</string>
    <string name="must_avatar">Please add your avatar!</string>
    <string name="erro_emty">Fields cannot be left blank!</string>
    <string name="erro_name">The name must be at least 5 characters!</string>
    <string name="erro_id">Identification card must have 9 numbers or citizen ID must have 12 digits!</string>
    <string name="erro_num">Please enter the correct phone number!</string>
    <string name="erro_address">Please enter your full address!</string>
    <string name="success">Update successful!</string>
    <string name="update_failed">Update failed!</string>
    <string name="want_logout">Are you sure you want to log out?</string>
    <string name="change_pw_success">Password changed successfully!</string>
    <string name="change_pw_failed">Password changed failed!</string>
    <string name="succer_seller">Congratulations on becoming a landlord!</string>
    <string name="emty">You cannot leave it blank</string>
    <string name="failed_pw">Incorrect password</string>
    <string name="pw_notlike">Passwords do not match</string>
    <string name="st_wait">WAIT FOR CONFIRMATION</string>
    <string name="st_ok">CONFIRMED</string>
    <string name="st_cancle">CANCELLED</string>
    <string name="del_want">Are you sure you want to delete the room?</string>
    <string name="del">Delete</string>
    <string name="del_succes">Deleted successfully</string>
    <string name="no_text">No</string>
    <string name="success_book">The order has been confirmed</string>
    <string name="wait_accept">Being confirmed...</string>
    <string name="home">HOME</string>
    <string name="gd">TRANSACTION</string>
    <string name="logining">LOGIN...</string>
    <string name="login_success">Logged in successfully</string>
    <string name="err_user_pw">Account or password is incorrect</string>
    <string name="noti_title">NOTIFICATION</string>
    <string name="user_tit">USER</string>
    <string name="ip_address">Address</string>
</resources>