<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/tvDangKy"
            android:layout_below="@id/logo"
            android:layout_centerInParent="true"
            android:layout_marginTop="-150dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/logo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="40sp"
                android:textStyle="bold"
                android:theme="@style/title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTK"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo2"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtTk"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:drawableLeft="@drawable/user"
                    android:drawablePadding="10dp"
                    android:hint="@string/input_mail"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilMK"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtMk"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:drawableStart="@drawable/pass"
                    android:drawablePadding="10dp"
                    android:hint="@string/input_pw"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cbCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pass"
                android:layout_marginBottom="8dp"
                android:buttonTint="@color/blue"
                android:text="@string/save_pass"
                android:visibility="gone" />


            <Button
                android:id="@+id/btnDangNhap"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/checkbox"
                android:layout_marginTop="20dp"
                android:background="@color/blue"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="@color/bg"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvQuenMk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/quenMk"
                android:textAlignment="center" />
        </LinearLayout>


        <TextView
            android:id="@+id/tvDangKy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:text="@string/emty_reg"
            android:textAlignment="center" />

    </RelativeLayout>

</FrameLayout>